--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,7 +76,6 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Iniciar sesion"
@@ -179,7 +178,7 @@
           </div>
           <div class="carousel-item text-center bg-white">
             <img
-              src="../img/fotoBovi.jpg"
+              src="../img/fotoThiago.pg.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
@@ -189,7 +188,7 @@
           </div>
           <div class="carousel-item text-center bg-white">
             <img
-              src="../img/fotoBovi.jpg"
+              src="../img/fotoRamiro.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
@@ -386,7 +385,7 @@
             <form>
               <div class="mb-3">
                 <label for="InputEmail1" class="form-label"
-                  >Correo electronico</label
+                  >Correo electrónico</label
                 >
                 <input
                   type="email"
