--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,7 +41,10 @@
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img class="img-fluid logo" src="../img/logo.png" alt="logo R-neumaticos"
+            ><img
+              class="img-fluid logo"
+              src="../img/logo.png"
+              alt="logo R-neumaticos"
           /></a>
           <button
             class="navbar-toggler"
@@ -205,12 +208,16 @@
       <section class="container my-5 bg-light">
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
+            <div class="card text-center h-100">
               <div class="card-header bg-dark">
                 <p class="text-light mt-3 fs-3 modeloF">DIABLO ROSSO III</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto1.jpeg" alt="neumatico diablo rosso iii" class="w-100" />
+                <img
+                  src="../img/producto1.jpeg"
+                  alt="neumatico diablo rosso iii"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -229,12 +236,16 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
+            <div class="card text-center h-100">
               <div class="card-header bg-dark">
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION TRAIL II</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto2.jpeg" alt="neumatico scorpion trail ii" class="w-100" />
+                <img
+                  src="../img/producto2.jpeg"
+                  alt="neumatico scorpion trail ii"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -253,12 +264,16 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
+            <div class="card text-center h-100">
               <div class="card-header bg-dark modeloF">
                 <p class="text-light mt-3 fs-3">DIABLO ROSSO IV</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto3.jpeg" alt="neumatico diablo rosso iv" class="w-100" />
+                <img
+                  src="../img/producto3.jpeg"
+                  alt="neumatico diablo rosso iv"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -282,7 +297,11 @@
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION-AT</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/SCORPION-AT.png" alt="neumatico scorpion at" class="w-100" />
+                <img
+                  src="../img/SCORPION-AT.png"
+                  alt="neumatico scorpion at"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -306,7 +325,11 @@
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION-ATR</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/SCORPION-ATR.png" alt="neumatico scorpion atr" class="w-100" />
+                <img
+                  src="../img/SCORPION-ATR.png"
+                  alt="neumatico scorpion atr"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -317,8 +340,7 @@
                   type="button"
                   class="btn btn-primary mb-2"
                   data-bs-toggle="modal"
-                  data-bs-target="#ModalProductos"
-                  onclick="location.href='./error404.html'"
+                  data-bs-target="#ModalScorpionAtr"
                 >
                   Ver más
                 </button>
@@ -331,7 +353,11 @@
                 <p class="text-light mt-3 fs-3 modeloF">TR999-1</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/TR999-1.png" alt="neumatico tr999" class="w-100" />
+                <img
+                  src="../img/TR999-1.png"
+                  alt="neumatico tr999"
+                  class="w-100"
+                />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -351,7 +377,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
+            <div class="card text-center h-100">
               <div class="card-header bg-dark">
                 <p class="text-light mt-3 fs-3 modeloF">A/T 697</p>
               </div>
@@ -380,7 +406,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
+            <div class="card text-center h-100">
               <div class="card-header bg-dark">
                 <p class="text-light mt-3 fs-3 modeloF">AT694</p>
               </div>
@@ -391,7 +417,7 @@
                   class="img-fluid w-50"
                 />
               </div>
-              <div class="card-footer bg-dark">
+              <div class="card-footer bg-dark h-100">
                 <p class="text-light">
                   Diseño AT para uso mixto: Asfalto 60% / fuera de camino 40%
                   Amplios canales en bloques de hombros Tecnología UNI-T
@@ -704,8 +730,8 @@
                       </div>
                       <div class="card-footer bg-dark cardFooterDiv">
                         <p class="text-light">
-                          Vida útil superior, mayor resistencia al corte y opción
-                          numero uno para aventuras
+                          Vida útil superior, mayor resistencia al corte y
+                          opción numero uno para aventuras
                         </p>
 
                         <button
@@ -980,6 +1006,262 @@
                             Diablo Rosso III supera mis expectativas. Ofrece una
                             increíble estabilidad a altas velocidades y un
                             manejo preciso. ¡Mi elección número uno!
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer bg-dark">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cerrar
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="location.href='./carrito.html'"
+            >
+              Comprar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="ModalScorpionAtr"
+      tabindex="-1"
+      aria-labelledby="ModalScorpionAtr"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header bg-dark">
+            <h5 class="modal-title text-light" id="ModalScorpionAtr">
+              SCORPION-ATR
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body bg-light">
+            <img
+              src="../img/SCORPION-ATR.png"
+              alt="rueda Diablo rosso 3"
+              class="w-100"
+            />
+            <p class="text-bg-warning mt-3 d-inline display-6">$ 300.400</p>
+            <div class="accordion my-3" id="acordeonProducto">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOneModal"
+                    aria-expanded="true"
+                    aria-controls="collapseOneModal"
+                  >
+                    Descripción del neumático
+                  </button>
+                </h2>
+                <div
+                  id="collapseOneModal"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#acordeonProducto"
+                >
+                  <div class="accordion-body">
+                    <strong>El Neumático Líder en Ventas: Scorpion ATR</strong>
+                    <p>
+                      Con una trayectoria impecable y una legión de conductores
+                      satisfechos respaldándolo, este neumático es la elección
+                      preferida para una amplia variedad de vehículos y estilos
+                      de conducción.
+                      <br />
+                    </p>
+                    <ul>
+                      <li>
+                        Versatilidad Inigualable:
+                        <strong>El Scorpion ATR</strong>
+                        es conocido por su versatilidad incomparable. Tanto si
+                        conduces en la ciudad como si te aventuras fuera de la
+                        carretera, este neumático se adapta a todas tus
+                        necesidades. Ofrece un rendimiento óptimo en una
+                        variedad de condiciones y terrenos.<br />
+                      </li>
+                      <li>
+                        Agarre y Estabilidad: Este neumático combina un agarre
+                        excepcional con una estabilidad sin igual. Ya sea en
+                        carreteras mojadas, secas o superficies accidentadas,
+                        puedes confiar en que el
+                        <strong>>Scorpion ATR</strong> mantendrá tu vehículo
+                        bajo control en todo momento.
+                        <br />
+                      </li>
+                      <li>
+                        Durabilidad de Clase Mundial: Los conductores confían en
+                        el <strong>Scorpion ATR</strong> por su durabilidad de
+                        clase mundial. Está diseñado para resistir el desgaste
+                        de la conducción diaria y las aventuras todoterreno.
+                        Puedes estar seguro de que te llevará lejos y durará
+                        mucho tiempo.<br />
+                      </li>
+                      <li>
+                        Diseño Moderno y Atractivo: El
+                        <strong>Scorpion ATR</strong> no solo ofrece un
+                        rendimiento impresionante, sino que también tiene un
+                        diseño moderno y atractivo que realza la estética de tu
+                        vehículo. Combina estilo y función de manera
+                        excepcional.<br />
+                      </li>
+                      <li>
+                        <strong>Scorpion ATR:</strong> El Número Uno en Ventas
+                        para Conductores Exigentes. Si buscas el equilibrio
+                        perfecto entre versatilidad, rendimiento y durabilidad,
+                        el Scorpion ATR es la elección definitiva. Únete a la
+                        comunidad de conductores satisfechos y experimenta la
+                        excelencia que solo el número uno en ventas puede
+                        ofrecer.
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwoModal"
+                    aria-expanded="false"
+                    aria-controls="collapseTwoModal"
+                  >
+                    Desempeño del neumático
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwoModal"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#acordeonProducto"
+                >
+                  <div class="accordion-body">
+                    <div class="my-4"><p>Seco</p></div>
+                    <div
+                      class="progress"
+                      role="progressbar"
+                      aria-label="Desempeño Seco"
+                      aria-valuenow="100"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      <div class="progress-bar bg-dark bar-seco-6">100%</div>
+                    </div>
+                    <div class="my-4"><p>Mojado</p></div>
+                    <div
+                      class="progress"
+                      role="progressbar"
+                      aria-label="Desempeño Mojado"
+                      aria-valuenow="95"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      <div class="progress-bar bg-dark bar-mojado-6">95%</div>
+                    </div>
+                    <div class="my-4"><p>Kilometraje</p></div>
+                    <div
+                      class="progress"
+                      role="progressbar"
+                      aria-label="Desempeño Kilometraje"
+                      aria-valuenow="95"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      <div class="progress-bar bg-dark bar-km-6">95%</div>
+                    </div>
+                    <div class="my-4"><p>Comfort</p></div>
+                    <div
+                      class="progress"
+                      role="progressbar"
+                      aria-label="Desempeño Comfort"
+                      aria-valuenow="85"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      <div class="progress-bar bg-dark bar-comfort-6">85%</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThreeModal"
+                    aria-expanded="false"
+                    aria-controls="collapseThreeModal"
+                  >
+                    Comentarios de nuestros Usuarios
+                  </button>
+                </h2>
+                <div
+                  id="collapseThreeModal"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#acordeonProducto"
+                >
+                  <div class="accordion-body">
+                    <div class="container">
+                      <div class="row border border-dark-subtle">
+                        <div class="col-2">
+                          <i class="bi bi-person-circle iconoUsuario"></i>
+                        </div>
+                        <div class="col-10 my-3">
+                          <h5 class="">Usuario anónimo</h5>
+                          <br />
+                          <p>
+                            El Scorpion ATR es el mejor neumático que he tenido.
+                            Funciona de maravilla en la ciudad y en caminos de
+                            tierra. Confiable, duradero y versátil.
+                          </p>
+                        </div>
+                        <hr />
+                        <div class="col-2 mb-1">
+                          <i class="bi bi-person-circle iconoUsuario"></i>
+                        </div>
+                        <div class="col-10 my-3">
+                          <h5>Usuario anónimo</h5>
+                          <br />
+                          <p>
+                            Este neumático hace maravillas en condiciones
+                            difíciles. Lo probé en terrenos rocosos y arenosos,
+                            y nunca me decepcionó. Su durabilidad es
+                            impresionante.
+                          </p>
+                        </div>
+                        <hr />
+                        <div class="col-2 my-3">
+                          <i class="bi bi-person-circle iconoUsuario"></i>
+                        </div>
+                        <div class="col-10 my-3">
+                          <h5>Usuario anónimo</h5>
+                          <br />
+                          <p>
+                            El Scorpion ATR es el rey de la versatilidad. Lo uso
+                            en mi camioneta todo el tiempo y nunca falla. Un
+                            neumático que se destaca en todas las situaciones.
                           </p>
                         </div>
                       </div>
@@ -2216,7 +2498,7 @@
             <form>
               <div class="mb-3">
                 <label for="InputEmail1" class="form-label"
-                  >Correo electronico</label
+                  >Correo electrónico</label
                 >
                 <input
                   type="email"
@@ -2243,14 +2525,8 @@
                 />
               </div>
               <div class="mb-3 form-check">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="Check1"
-                />
-                <label class="form-check-label" for="Check1"
-                  >Recordar</label
-                >
+                <input type="checkbox" class="form-check-input" id="Check1" />
+                <label class="form-check-label" for="Check1">Recordar</label>
               </div>
 
               <p>
