--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
             <button
               type="button"
               class="btn btn-primary"
-              onclick="location.href='./carrito.html'"
+              onclick="location.href='./pages/carrito.html'"
             >
               Comprar
             </button>
@@ -1063,7 +1063,7 @@
             <button
               type="button"
               class="btn btn-primary"
-              onclick="location.href='./carrito.html'"
+              onclick="location.href='./pages/carrito.html'"
             >
               Comprar
             </button>
@@ -1323,7 +1323,7 @@
             <button
               type="button"
               class="btn btn-primary"
-              onclick="location.href='./carrito.html'"
+              onclick="location.href='./pages/carrito.html'"
             >
               Comprar
             </button>
